# claude-bar

./: .gitignore  AGENTS.md  Cargo.toml  CodexBar-Parity-Plan.md  LICENSE  PLAN.md  PROMPT.md  README.md  SPEC.md  config.example.toml  flake.nix  ralph.sh  todo.md
.claude/: settings.json
nix/: hm-module.nix  nixos-module.nix
src/: lib.rs  main.rs
src/cli/: cost.rs  mod.rs  refresh.rs  refresh_pricing.rs  status.rs
src/core/: credentials.rs  mod.rs  models.rs  notifications.rs  retry.rs  settings.rs  store.rs
src/cost/: claude.rs  codex.rs  mod.rs  pricing.rs  scanner.rs  store.rs
src/daemon/: app.rs  dbus.rs  login.rs  mod.rs  polling.rs  tray.rs
src/icons/: mod.rs  renderer.rs
src/providers/: claude.rs  codex.rs  mod.rs
src/ui/: colors.rs  mod.rs  pace.rs  popup.rs  progress.rs  styles.rs
