[package]
name = "claude-bar"
version = "0.1.0"
edition = "2021"
description = "Linux system tray for AI coding assistant usage monitoring"
license = "MIT"
repository = "https://github.com/kabilan/claude-bar"
keywords = ["claude", "codex", "usage", "tray", "gtk"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-bar"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directories
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-journald = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# GTK/UI
gtk4 = "0.9"
libadwaita = "0.7"
ksni = { version = "0.3", features = ["tokio"] }

# D-Bus
zbus = "4"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# File watching
notify = "6"

# Notifications
notify-rust = "4"

# Async traits
async-trait = "0.1"

# URL opening
open = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
